modificacion de imagenes

--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -79,9 +79,9 @@
               </div>
                <!--franja vertical -->
               <div class="franjaV">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/Alvarito.png " alt="Foto de Alvarito">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/Market.png" alt="Foto de local">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.png" alt="Foto del equipo">
+                  <img data-aos="fade-up-left" src="../images/sobre nosotros/Alvarito.jpg " alt="Foto de Alvarito">
+                  <img data-aos="fade-up-left" src="../images/sobre nosotros/Market.jpg" alt="Foto de local">
+                  <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.jpg" alt="Foto del equipo">
               </div>
                <!--texto introducitorio -->
               <div class="texto1">
