actualizacion video pocos  mb

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <!--seccion bienvenidos-->
           <section class="videobv" >
              <video onloadedmetada="this.muted=true" autoplay loop >
-                 <source src="./images/generales/fondo4.jpg" >
+                 <source src="./images/generales/videofondo.mp4" >
              </video>
              <div class="welcome-text">
                  <h1>BIENVENIDOS</h1>
