--- a/pages/productos.html
+++ b/pages/productos.html
@@ -63,7 +63,7 @@
                          </ul>
                          <form class="d-flex" role="search">
                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/SERCH.png"alt="logo serch"></imgsrc></button>
+                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/serch.png"alt="logo serch"></imgsrc></button>
                          </form>
                      </div>
                 </div>
@@ -74,12 +74,16 @@
          <!--Seccion titulo-->
          <section class="tituloProductosBox"> 
              <div class="tituloProductos">
+                  <div class="vacio">
+                     <h3> </h3>
+                  </div>
                  <div class="tituloProd">
-                    <h2 class="h2Productos">PRODUCTOS</h2>
+                     <h2 data-aos="fade-down"
+                     data-aos-duration="1000" class="h2Productos">PRODUCTOS</h2>
                  </div>
-                  <div class="inicioSusc">
-                       <a href="../pages/pedidos.html#iniciasesion"target="_blank">Inicio de sesion</a>
-                       <a class="boton" href="../pages/pedidos.html#suscribite"target="_blank">Suscribite</a>
+                  <div class="inSus">
+                       <a class="botonIs" href="../pages/pedidos.html#iniciasesion"target="_blank">Inicio de sesion</a>
+                       <a class="botonIs" href="../pages/pedidos.html#suscribite"target="_blank">Suscribite</a>
                   </div>
                   <!--Seccion guia de pedidos-->
                   <div class="pedidoBox">
@@ -96,51 +100,64 @@
                          </ul>
                       </div>
                   </div>
-                  <div class="vacio">
-                    <h3> </h3>
-                  </div>
               </div>
          </section>
          <!--seccion grupo de productos-->
          <div class="tiposDeProductosBox">
               <h2>CATEGORIAS</h2>
-              <ul data-aos="fade-down"
-              data-aos-easing="linear"
-              data-aos-duration="1500" class="listaImagenes">
+              <ul class="listaImagenes">
                 
                    <li> 
                       <a href="#lecheof">
-                          <img class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
+                          <img data-aos="fade-right"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
                           <p class="cateletra">LACTEOS Y QUESOS</p>
                       </a>
                   </li>
                    <li>
                        <a href="#bebidasof">
-                          <img class="produc" src="../images/productos/productos generales/bebidasgral.png" alt="bebidas">
+                          <img data-aos="fade-left"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/bebidasgral.png" alt="bebidas">
                           <p class="cateletra">BEBIDAS Y TRAGOS</p>
                      </a>
                   </li>
                    <li>
                       <a href="#galletasof">
-                          <img class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
+                          <img data-aos="fade-right"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
                           <p class="cateletra">GALLETAS Y GOLOSINAS</p>
                       </a>
                   </li>
                    <li>
                       <a href="#almacenof">
-                          <img class="produc" src="../images/productos/productos generales/almacengral.png" alt="almacen y panaderia">
+                          <img data-aos="fade-left"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/almacengral.png" alt="almacen y panaderia">
                           <p class="cateletra">ALMACEN</p>
                       </a>
                    </li>
                    <li>
                       <a href="#jabon1">
-                          <img class="produc" src="../images/productos/productos generales/limpiezagral.png" alt="articulos de limpieza e higiene">
+                          <img data-aos="fade-right"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/limpiezagral.png" alt="articulos de limpieza e higiene">
                           <p class="cateletra">LIMPIEZA E HIGIENE</p> 
                       </a>
                    </li>
                    <li>
                        <a href="#nuez">
-                          <img class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
+                          <img data-aos="fade-left"
+                          data-aos-anchor="#example-anchor"
+                          data-aos-offset="500"
+                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
                           <p class="cateletra"> FRUTAS Y VERDURAS</p>
                        </a>
                   </li>
