--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -63,7 +63,7 @@
                          </ul>
                          <form class="d-flex" role="search">
                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/SERCH.png"alt="logo serch"></imgsrc></button>
+                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/serch.png"alt="logo serch"></imgsrc></button>
                          </form>
                        </div>
                   </div>
