--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -63,7 +63,7 @@
                          </ul>
                          <form class="d-flex" role="search">
                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/SERCH.png"alt="logo serch"></imgsrc></button>
+                             <button class="btn " type="submit"><img class="logoSerch" src="../images/generales/serch.png"alt="logo serch"></imgsrc></button>
                          </form>
                      </div>
                 </div>
@@ -74,11 +74,12 @@
          <div class="encontranos">
                <!--titulo encontranos -->
                <div class="tituloEncontrarnos">
-                  <h2>ENCONTRA MI TIENDA AQUI </h2>
+                  <h2 data-aos="fade-down"
+                  data-aos-duration="1000" >ENCONTRA MI TIENDA AQUI </h2>
                   <p class="cuatro20">ENCONTROS AQUI</p>
                </div>
                <!--franja vertical-->
-               <div class="verticalFranja">
+               <div data-aos="zoom-out-left" class="verticalFranja">
                   <p>Ponete en contacto con nosotros, haciendo click en los logos de abajo o visitanos en Ayacucho 386, SMT. </p> 
                   <!--redes en franja vertical-->
                  <div class="redesSociales2">      
@@ -99,17 +100,21 @@
                  </div>  
                </div>
                <!--mapa -->
-               <div class="mapa">
+               <div data-aos="fade-right"
+               data-aos-offset="300"
+               data-aos-easing="ease-in-sine" class="mapa">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d222.5095086772638!2d-65.21061068804053!3d-26.835112942142477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c0dbd945993%3A0x477163c92323fcb4!2sBatalla%20de%20Ayacucho%20386%2C%20T4000INH%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n!5e0!3m2!1ses!2sar!4v1713717083352!5m2!1ses!2sar" width="1030" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                </div>
                <!--horarios -->
-               <div class="horarios">
+               <div data-aos="fade-up"
+               data-aos-duration="3000" class="horarios">
                   <h2>HORARIOS</h2>
                   <p>Lunes a Sabados</p>
                   <p class="p2">de 7 am a 11pm</p>
                </div>
                 <!--trabaja -->
-               <div class="trabaja">
+               <div data-aos="fade-up"
+               data-aos-duration="3000" class="trabaja">
                   <h2>TRABAJA CON NOSOTROS</h2>
                   <div class="mb-3">
                     <label for="formFileMultiple" class="form-label"></label>
