--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
           <section class="ofertasBox" id="ofertas">
               <h2>OFERTAS</h2>
               <p>Hace click en las imagenes para conocer nuestras ofertas </p>
-              <div data-aos="fade-right" class="ofertasDiv">
-                 <a href="./pages/productos.html#galletaof" target="_blank"><img class="ofertasImg" src="./images/productos/galletas/galleta2.png" alt="Oferta 1"></a>
-                 <a href="./pages/productos.html#almacenof" target="_blank"><img class="ofertasImg"src="./images/productos/almacen/almacen2.png" alt="oferta2"></a>
-                 <a href="./pages/productos.html#lecheof" target="_blank"><img class="ofertasImg"src="./images/productos/lacteos/leche2.png" alt="oferta3"></a>
-                 <a href="./pages/productos.html#jabon1" target="_blank"><img class="ofertasImg"src="./images/productos/limpieza/jabon1.png" alt="oferta4"></a>
-                 <a href="./pages/productos.html#nuez" target="_blank"><img class="ofertasImg"src="./images/productos/frutas/nuezpng.png" alt="oferta5"></a>
+              <div class="ofertasDiv">
+                 <a href="./pages/productos.html#galletaof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg" src="./images/productos/galletas/galleta2.png" alt="Oferta 1"></a>
+                 <a href="./pages/productos.html#almacenof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/almacen/almacen2.png" alt="oferta2"></a>
+                 <a href="./pages/productos.html#lecheof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/lacteos/leche2.png" alt="oferta3"></a>
+                 <a href="./pages/productos.html#jabon1" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/limpieza/jabon1.png" alt="oferta4"></a>
+                 <a href="./pages/productos.html#nuez" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/frutas/nuezpng.png" alt="oferta5"></a>
               </div>
           </section>
           <div class="separadorDePagina">
@@ -141,13 +141,13 @@
               </p>
               <div class="iframe">
                  <div class="ratio ratio-16x9">
-                      <iframe src="https://www.youtube.com/embed/Fb_IljnhwTo?si=dpsmQ67MbAvkoEdF" title="Receta Fideos" allowfullscreen></iframe>
+                      <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/Fb_IljnhwTo?si=dpsmQ67MbAvkoEdF" title="Receta Fideos" allowfullscreen></iframe>
                   </div>
                   <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/Hiim9wUFjxU?si=qp-B2smeREl2u61r" title="Receta 2" allowfullscreen></iframe>
+                    <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/Hiim9wUFjxU?si=qp-B2smeREl2u61r" title="Receta 2" allowfullscreen></iframe>
                   </div>
                   <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/lS1YGtz2Mss?si=SkYMATqcBeNGRtIs" title="Receta 2" allowfullscreen></iframe>
+                    <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/lS1YGtz2Mss?si=SkYMATqcBeNGRtIs" title="Receta 2" allowfullscreen></iframe>
                   </div>
               </div>
          </section>
@@ -157,7 +157,7 @@
           <!--Seccion Cards-->
          <section class="tarjetaVisita">
             <div data-aos="fade-up"
-            data-aos-duration="3000" class="card" style="">
+            data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardproductos.jpg" class="card-img-top" alt="card productos">
                 <div class="card-body text-center">
                   <h4 class="card-title">NUESTROS PRODUCTOS</h4>
@@ -166,7 +166,7 @@
                 </div>
            </div>
           <div data-aos="fade-up"
-          data-aos-duration="3000" class="card" style="">
+          data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardsobreus.jpg" class="card-img-top" alt="card sobre nosotros">
                 <div class="card-body text-center">
                   <h4 class="card-title">CONOCE NUESTRA HISTORIA</h4>
@@ -175,7 +175,7 @@
                 </div>
            </div>
            <div data-aos="fade-up"
-           data-aos-duration="3000" class="card" style="">
+           data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardencontranos.jpg" class="card-img-top" alt="card encontranos">
                 <div class="card-body text-center">
                   <h4 class="card-title">ENCONTRANOS AQUI</h4>
