--- a/pages/productos.html
+++ b/pages/productos.html
@@ -109,55 +109,37 @@
                 
                    <li> 
                       <a href="#lecheof">
-                          <img data-aos="fade-right"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
                           <p class="cateletra">LACTEOS Y QUESOS</p>
                       </a>
                   </li>
                    <li>
                        <a href="#bebidasof">
-                          <img data-aos="fade-left"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/bebidasgral.png" alt="bebidas">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/bebidasgral.png" alt="bebidas">
                           <p class="cateletra">BEBIDAS Y TRAGOS</p>
                      </a>
                   </li>
                    <li>
                       <a href="#galletasof">
-                          <img data-aos="fade-right"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
                           <p class="cateletra">GALLETAS Y GOLOSINAS</p>
                       </a>
                   </li>
                    <li>
                       <a href="#almacenof">
-                          <img data-aos="fade-left"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/almacengral.png" alt="almacen y panaderia">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/almacengral.png" alt="almacen y panaderia">
                           <p class="cateletra">ALMACEN</p>
                       </a>
                    </li>
                    <li>
                       <a href="#jabon1">
-                          <img data-aos="fade-right"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/limpiezagral.png" alt="articulos de limpieza e higiene">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/limpiezagral.png" alt="articulos de limpieza e higiene">
                           <p class="cateletra">LIMPIEZA E HIGIENE</p> 
                       </a>
                    </li>
                    <li>
                        <a href="#nuez">
-                          <img data-aos="fade-left"
-                          data-aos-anchor="#example-anchor"
-                          data-aos-offset="500"
-                          data-aos-duration="500" class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
+                          <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
                           <p class="cateletra"> FRUTAS Y VERDURAS</p>
                        </a>
                   </li>
@@ -167,7 +149,7 @@
          <section class="listadoDeProductos">
               <h2> LISTADOS DE PRODUCTOS</h2>
               <!--Galletas-->
-              <div class="galletas" id="galletaof">
+              <div data-aos="zoom-in-up" class="galletas" id="galletaof">
                   <h3>GALLETAS, SNACKS, GOLOSINAS Y CHOCOLATES
                   </h3>
                   <div id="cookies" class="carousel slide carousel-fade">
@@ -219,7 +201,7 @@
                   </div>
               </div>
               <!--Lacteos-->
-              <div class="lacteos" id="lecheof">
+              <div data-aos="zoom-in-up" class="lacteos" id="lecheof">
                   <h3> LACTEOS Y PRODUCTOS FRESCOS</h3>
                   <div id="dairy" class="carousel slide carousel-fade">
                      <div class="carousel-inner">
@@ -270,7 +252,7 @@
                   </div>
              </div>  
                 <!--Bebidas-->
-             <div class="bebidas" id="bebidasof">
+             <div data-aos="zoom-in-up" class="bebidas" id="bebidasof">
                   <h3> BEBIDAS </h3>
                   <div id="drinks" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -321,7 +303,7 @@
                  </div>
              </div>  
                 <!--almacen-->
-              <div class="almacen" id="almacenof">
+              <div data-aos="zoom-in-up" class="almacen" id="almacenof">
                   <h3> ALMACEN Y PANADERIA </h3>
                   <div id="grocery" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -372,7 +354,7 @@
                  </div>
              </div>  
               <!--frutas-->
-              <div class="frutas" id="nuez">
+              <div data-aos="zoom-in-up" class="frutas" id="nuez">
                  <h3> FRUTAS Y VERDURAS </h3>
                  <div id="fruts" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -423,7 +405,7 @@
                  </div>
              </div>  
              <!--limpieza-->
-             <div class="limpieza" id="jabon1">
+             <div data-aos="zoom-in-up" class="limpieza" id="jabon1">
                  <h3> LIMPIEZA Y ARTICULOS DE HIGIENE </h3>
                  <div id="clean" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
