--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -78,7 +78,8 @@
                   </h2>
               </div>
                <!--franja vertical -->
-              <div class="franjaV">
+              <div data-aos="fade-down"
+              data-aos-duration="1000"  class="franjaV">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/Alvarito.jpg " alt="Foto de Alvarito">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/Market.jpg" alt="Foto de local">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.jpg" alt="Foto del equipo">
