--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -79,7 +79,7 @@
               </div>
                <!--franja vertical -->
               <div data-aos="fade-down"
-              data-aos-duration="1000"  class="franjaV">
+              data-aos-duration="1000"  gigclass="franjaV">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/Alvarito.jpg " alt="Foto de Alvarito">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/Market.jpg" alt="Foto de local">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.jpg" alt="Foto del equipo">
