--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
      <!--AOS-->
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-     <!--estilo-->
-     <link rel="stylesheet" href="./css/estilo.css">
      <!--fuente no titulo-->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,13 +24,15 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
+     <!--estilo-->
+     <link rel="stylesheet" href="./css/estilo.css">
  </head>
  <!--body box-->
  <body>
       <header id="arriba">
          <!--barra superior-->
          <div class="barraSuperior">
-              <img class="logo1"src="./images/generales/icono.png" alt="logo alvarito">
+            <a class="imgLog" href ="../index.html"><img class="logo1"src="../images/generales/icono.png" alt="logo alvarito"></a>
           </div>
           <!--barra nav-->
           <section class="barra2">
@@ -85,7 +85,7 @@
               </div>
           </section>
           <div class="separadorDePagina">
-            <p></p>
+            <p> </p>
           </div>
           <!--seccion pedidos-->
           <section>
@@ -117,7 +117,7 @@
               </div>
           </section>
           <div class="separadorDePagina">
-            <p></p>
+            <p> </p>
           </div>
           <!--seccion ofertas-->
           <section class="ofertasBox" id="ofertas">
@@ -152,7 +152,7 @@
               </div>
          </section>
          <div class="separadorDePagina">
-            <p></p>
+            <p> </p>
           </div>
           <!--Seccion Cards-->
          <section class="tarjetaVisita">
@@ -160,7 +160,7 @@
             data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardproductos.jpg" class="card-img-top" alt="card productos">
                 <div class="card-body text-center">
-                  <h4 class="card-title">NUESTROS PRODUCTOS</h4>
+                  <h3 class="card-title">NUESTROS PRODUCTOS</h3>
                   <p class="card-text">Pasa por nuestra tienda virtual y mira lo que tenemos!</p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Elegi</a>
                 </div>
@@ -169,7 +169,7 @@
           data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardsobreus.jpg" class="card-img-top" alt="card sobre nosotros">
                 <div class="card-body text-center">
-                  <h4 class="card-title">CONOCE NUESTRA HISTORIA</h4>
+                  <h3 class="card-title">CONOCE NUESTRA HISTORIA</h3>
                   <p class="card-text">Conocenos, te contamos nuestra historia </p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Conocenos</a>
                 </div>
@@ -178,7 +178,7 @@
            data-aos-duration="500" class="card" style="">
                 <img src="./images/generales/cardencontranos.jpg" class="card-img-top" alt="card encontranos">
                 <div class="card-body text-center">
-                  <h4 class="card-title">ENCONTRANOS AQUI</h4>
+                  <h3 class="card-title">ENCONTRANOS AQUI</h3>
                   <p class="card-text">Visitarnos, trabajar con nosotros o comunicarte </p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontranos</a>
          </div>
@@ -191,7 +191,7 @@
              <a href="#arriba"><img class="flecha" src="./images/generales/flecha.png" alt="flecha"></a>
          </div>
          <div>
-            <a href="#arriba"><img class="logoFooter" src="./images/favico/Icono.ico" alt="logo footer"></a>
+            <a href="#arriba"><img class="logoFooter" src="./images/generales/icono.png" alt="logo footer"></a>
          </div>
          <div class="redesSociales">   
              <p>SEGUINOS EN NUESTRAS REDES</p>  
