--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -26,13 +26,15 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
+     <!--estilo-->
+     <link rel="stylesheet" href="../css/estilo.css">
  </head>
  <!--body box-->
  <body>
       <header id="arriba">
           <!--barra superior-->
           <div class="barraSuperior">
-              <img class="logo1"src="../images/generales/icono.png" alt="logo alvarito">
+            <a class="imgLog" href ="../index.html"><img class="logo1"src="../images/generales/icono.png" alt="logo alvarito"></a>
           </div>
           <!--barra nav-->
           <section class="barra2">
