--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,8 +16,6 @@
      <!--AOS-->
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-     <!--estilo-->
-     <link rel="stylesheet" href="../css/estilo.css">
      <!--fuente no titulo-->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,13 +24,15 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
+     <!--estilo-->
+     <link rel="stylesheet" href="../css/estilo.css">
  </head>
  <!--body box-->
  <body>
     <header id="arriba">
         <!--barra superior-->
         <div class="barraSuperior">
-             <img class="logo1"src="../images/generales/icono.png" alt="logo alvarito">
+            <a class="imgLog" href ="../index.html"><img class="logo1"src="../images/generales/icono.png" alt="logo alvarito"></a>
          </div>
          <!--barra nav-->
          <section class="barra2">
@@ -469,7 +469,7 @@
             <a href="#arriba"><img class="flecha" src="../images/generales/flecha.png" alt="flecha"></a>
         </div>
         <div>
-           <a href="../index.html"><img class="logoFooter" src="../images/favico/Icono.ico" alt="logo footer"></a>
+           <a href="../index.html"><img class="logoFooter" src="../images/generales/icono.png" alt="logo footer"></a>
         </div>
         <div class="redesSociales">   
             <p>SEGUINOS EN NUESTRAS REDES</p>  
