--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <header id="arriba">
          <!--barra superior-->
          <div class="barraSuperior">
-            <a class="imgLog" href ="../index.html"><img class="logo1"src="../images/generales/icono.png" alt="logo alvarito"></a>
+            <a class="imgLog" href ="../index.html"><img class="logo1"src="./images/generales/icono.png" alt="logo alvarito"></a>
           </div>
           <!--barra nav-->
           <section class="barra2">
@@ -97,7 +97,8 @@
                           <p>DELIVERY</p>
                       </div>
                  </div>
-                 <div data-aos="fade-left" class="guiaDePedidos">
+                 <div data-aos="fade-up"
+                 data-aos-duration="500" class="guiaDePedidos">
                      <ul>
                          <li><a href="./pages/pedidos.html#iniciasesion" target="_blank"><img class="logosPedidos" src="./images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
 
@@ -141,13 +142,16 @@
               </p>
               <div class="iframe">
                  <div class="ratio ratio-16x9">
-                      <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/Fb_IljnhwTo?si=dpsmQ67MbAvkoEdF" title="Receta Fideos" allowfullscreen></iframe>
+                      <iframe data-aos="fade-up"
+                      data-aos-duration="500" src="https://www.youtube.com/embed/Fb_IljnhwTo?si=dpsmQ67MbAvkoEdF" title="Receta Fideos" allowfullscreen></iframe>
                   </div>
                   <div class="ratio ratio-16x9">
-                    <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/Hiim9wUFjxU?si=qp-B2smeREl2u61r" title="Receta 2" allowfullscreen></iframe>
+                    <iframe data-aos="fade-up"
+                    data-aos-duration="500" src="https://www.youtube.com/embed/Hiim9wUFjxU?si=qp-B2smeREl2u61r" title="Receta 2" allowfullscreen></iframe>
                   </div>
                   <div class="ratio ratio-16x9">
-                    <iframe data-aos="zoom-in-up" src="https://www.youtube.com/embed/lS1YGtz2Mss?si=SkYMATqcBeNGRtIs" title="Receta 2" allowfullscreen></iframe>
+                    <iframe data-aos="fade-up"
+                    data-aos-duration="500" src="https://www.youtube.com/embed/lS1YGtz2Mss?si=SkYMATqcBeNGRtIs" title="Receta 2" allowfullscreen></iframe>
                   </div>
               </div>
          </section>
