--- a/pages/productos.html
+++ b/pages/productos.html
@@ -149,7 +149,7 @@
          <section class="listadoDeProductos">
               <h2> LISTADOS DE PRODUCTOS</h2>
               <!--Galletas-->
-              <div data-aos="zoom-in-up" class="galletas" id="galletaof">
+              <div class="galletas" id="galletaof">
                   <h3>GALLETAS, SNACKS, GOLOSINAS Y CHOCOLATES
                   </h3>
                   <div id="cookies" class="carousel slide carousel-fade">
@@ -201,7 +201,7 @@
                   </div>
               </div>
               <!--Lacteos-->
-              <div data-aos="zoom-in-up" class="lacteos" id="lecheof">
+              <div class="lacteos" id="lecheof">
                   <h3> LACTEOS Y PRODUCTOS FRESCOS</h3>
                   <div id="dairy" class="carousel slide carousel-fade">
                      <div class="carousel-inner">
@@ -252,7 +252,7 @@
                   </div>
              </div>  
                 <!--Bebidas-->
-             <div data-aos="zoom-in-up" class="bebidas" id="bebidasof">
+             <div class="bebidas" id="bebidasof">
                   <h3> BEBIDAS </h3>
                   <div id="drinks" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -303,7 +303,7 @@
                  </div>
              </div>  
                 <!--almacen-->
-              <div data-aos="zoom-in-up" class="almacen" id="almacenof">
+              <div class="almacen" id="almacenof">
                   <h3> ALMACEN Y PANADERIA </h3>
                   <div id="grocery" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -354,7 +354,7 @@
                  </div>
              </div>  
               <!--frutas-->
-              <div data-aos="zoom-in-up" class="frutas" id="nuez">
+              <div class="frutas" id="nuez">
                  <h3> FRUTAS Y VERDURAS </h3>
                  <div id="fruts" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -405,7 +405,7 @@
                  </div>
              </div>  
              <!--limpieza-->
-             <div data-aos="zoom-in-up" class="limpieza" id="jabon1">
+             <div class="limpieza" id="jabon1">
                  <h3> LIMPIEZA Y ARTICULOS DE HIGIENE </h3>
                  <div id="clean" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
@@ -459,7 +459,7 @@
          <!--ir a pagina pedidos-->
          <section class="irAPedidos">
             <p>Ya terminaste de elegir?</p>
-            <a class="boton" href="./pages/pedidos.html"target="_blank">Hace tu Pedido aqui!</a>
+            <a class="boton" href="../pages/pedidos.html"target="_blank">Hace tu Pedido aqui!</a>
          </section>
       </main> 
       
